# Enigma

./: .gitignore  CMakeLists.txt  README.md  environment.yml  install.sh  meson.build  pyproject.toml  reinstall.sh  setup.py  test.sh
.github/workflows/: publish.yml  test.yml
enigma/: __init__.py
enigma/core/: enigma_module.cpp  tensor.cpp  tensor.h
examples/: scalar_examples.py
include/: Allocator.h  COW.h  DEBUG.h  DataPtr.h  Device.h  DeviceType.h  README.md  Scalar.h  Storage.h
python/enigma/: __init__.py
python/src/: bindings.cpp
python/tests/: test_scalar.py
src/: Allocator.cpp  COW.cpp  Device.cpp  DeviceType.cpp  Scalar.cpp  Storage.cpp
tests/: scalar_tests.cpp  storage_cow_tests.cpp  test_tensor.py
